header and footer
BUP

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">    
     <head>
         <title>BCA CTF - Cyber Security Competition</title>
         
@@ -17,3 +18,4 @@
         </div>
     </nav>
     <div class="container">
+        
