Updated to Bootstrap

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -2,9 +2,10 @@
 <html lang="en">    
     <head>
         <title>BCA CTF - Cyber Security Competition</title>
-        
-        <link rel="stylesheet" type="text/css" href="/static/css/materialize.min.css"/>
-        <link rel="stylesheet" type="text/css" href="/static/js/materialize.min.js"/>
+
+        <link rel="stylesheet" type="text/css" href="static/css/index.css"/>
+        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap-grid.min.css"/>
+    
     </head>
     <body>
     <nav>
