--- a/views/header.ejs
+++ b/views/header.ejs
@@ -4,19 +4,13 @@
         <title>BCA CTF - Cyber Security Competition</title>
 
         <link rel="stylesheet" type="text/css" href="static/css/index.css"/>
-        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap-grid.min.css"/>
-    
+        <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
+        
+        <script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     </head>
     <body>
     <nav>
-        <div class="nav-wrapper">
-            <a href="#!" class="brand-logo left">BCA CTF</a>
-            <ul class="left hide-on-med-and-down">
-                <li><a href="sass.html">Sass</a></li>
-                <li><a href="badges.html">Components</a></li>
-                <li class="active"><a href="collapsible.html">JavaScript</a></li>
-            </ul>
-        </div>
+
     </nav>
     <div class="container">
         
