--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,3 +1,11 @@
+html {
+    font-family: 'Ubuntu Mono', monospace !important;
+}
+
+h1 {
+    color: red;
+}
+
 body {
     margin: 0px;
     padding: 0px;
@@ -11,19 +19,23 @@ nav {
 
 .fa-1x {
     font-size: 1.5rem;
-    }
-    .navbar-toggler.toggler-example {
+}
+.navbar-toggler.toggler-example {
     cursor: pointer;
-    }
-    .dark-blue-text {
+}
+.dark-blue-text {
     color: #0A38F5;
-    }
-    .dark-pink-text {
+}
+.dark-pink-text {
     color: #AC003A;
-    }
-    .dark-amber-text {
+}
+.dark-amber-text {
     color: #ff6f00;
-    }
-    .dark-teal-text {
+}
+.dark-teal-text {
     color: #004d40;
-    }
+}
+
+h1 {
+
+}
