Updated Nav + Home

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -20,8 +20,8 @@
                 <a class="navbar-brand d-none d-lg-inline-block nav-logo" href="#">
                     BCACTF
                 </a>
-                <a class="navbar-brand-two mx-auto d-lg-none d-inline-block" href="#">
-                    <img src="//placehold.it/40?text=LOGO" alt="logo">
+                <a class="navbar-brand mx-auto d-lg-none d-inline-block" href="#">
+                    BCACTF
                 </a>
                 <div class="w-100 text-right">
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar">
