--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,22 @@
 <%- include("header.ejs") %>
 
-<h1>hello world</h1>
+<div class="row">
+
+    <div class="container">
+
+        <div class="col-lg-6 offset-lg-3 col-sm-12">
+
+            <div class="col-sm-12">
+                <img id="logo" src="/static/img/BCACTF-logo.png"/>
+            </div>
+
+            <div class="">
+
+            </div>
+
+        </div>
+
+    </div>
+</div>
 
 <%- include("footer.ejs") %>
