--- a/views/header.ejs
+++ b/views/header.ejs
@@ -20,8 +20,8 @@
                 <a class="navbar-brand d-none d-lg-inline-block nav-logo" href="#">
                     BCACTF
                 </a>
-                <a class="navbar-brand-two mx-auto d-lg-none d-inline-block" href="#">
-                    <img src="//placehold.it/40?text=LOGO" alt="logo">
+                <a class="navbar-brand-two mx-auto d-lg-none d-inline-block nav-logo" href="#">
+                    BCACTF
                 </a>
                 <div class="w-100 text-right">
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar">
@@ -32,22 +32,22 @@
             <div class="collapse navbar-collapse flex-grow-1 text-right" id="myNavbar">
                 <ul class="navbar-nav ml-auto flex-nowrap">
                     <li class="nav-item">
-                        <a href="#" class="nav-link m-2 menu-item">ABOUT</a>
+                        <a href="#" class="nav-link m-2 menu-item nav-menu-item">ABOUT</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link m-2 menu-item">FAQ</a>
+                        <a href="#" class="nav-link m-2 menu-item nav-menu-item">FAQ</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link m-2 menu-item nav-active">CONTACT</a>
+                        <a href="#" class="nav-link m-2 menu-item nav-menu-item nav-active">CONTACT</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link m-2 menu-item">RULES</a>
+                        <a href="#" class="nav-link m-2 menu-item nav-menu-item">RULES</a>
                     </li>
                     <li class="nav-item">
-                            <a href="#" class="nav-link m-2 menu-item">GET STARTED</a>
+                        <a href="#" class="nav-link m-2 menu-item nav-menu-item">GET STARTED</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link m-2 menu-item">LOGIN</a>
+                        <a href="#" class="nav-link m-2 menu-item nav-menu-item">LOGIN</a>
                     </li>
                 </ul>
             </div>
