--- a/views/header.ejs
+++ b/views/header.ejs
@@ -20,11 +20,8 @@
                 <a class="navbar-brand d-none d-lg-inline-block nav-logo" href="#">
                     BCACTF
                 </a>
-<<<<<<< HEAD
-                <a class="navbar-brand-two mx-auto d-lg-none d-inline-block nav-logo" href="#">
-=======
                 <a class="navbar-brand mx-auto d-lg-none d-inline-block" href="#">
->>>>>>> a4df363cfab4537e5cec3a00b1000581436653dc
+                <!-- <a class="navbar-brand-two mx-auto d-lg-none d-inline-block nav-logo" href="#"> -->   
                     BCACTF
                 </a>
                 <div class="w-100 text-right">
