--- a/static/css/index.css
+++ b/static/css/index.css
@@ -93,6 +93,10 @@ h1 {
     color: #FFFFFF;
 }
 
+.faqPageContent {
+    color: #FFFFFF;
+}
+
 .faqScreensGrid {
     display: flex;
     flex-wrap: wrap;
