faq screen item title bars

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -33,13 +33,13 @@
             <div class="collapse navbar-collapse flex-grow-1 text-right" id="myNavbar">
                 <ul class="navbar-nav ml-auto flex-nowrap">
                     <li class="nav-item">
-                        <a href="#" class="nav-link m-2 menu-item nav-menu-item">ABOUT</a>
+                        <a href="/about" class="nav-link m-2 menu-item nav-menu-item">ABOUT</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link m-2 menu-item nav-menu-item">FAQ</a>
+                        <a href="/faq" class="nav-link m-2 menu-item nav-menu-item">FAQ</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link m-2 menu-item nav-menu-item nav-active">CONTACT</a>
+                        <a href="/contact" class="nav-link m-2 menu-item nav-menu-item nav-active">CONTACT</a>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-link m-2 menu-item nav-menu-item">RULES</a>
