--- a/static/css/index.css
+++ b/static/css/index.css
@@ -111,12 +111,13 @@ h1 {
     margin-bottom: 20px;
     margin-right: auto;
     margin-left: auto;
-    padding: 15px;
+    border-radius: 7px;
 }
 
 .faqScreenHeaderBar {
     background: #D6D6D6;
     width: 40%;
+    min-width: 20%;
     height: 5%;
 }
 
@@ -168,3 +169,32 @@ h1 {
     width: 55%;
     height: 55%;
 }
+
+.titlebar {
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0.0, #ebebeb, color-stop(1.0, #d5d5d5)));
+    background: -webkit-linear-gradient(top, #ebebeb, #d5d5d5);
+    background: -moz-linear-gradient(top, #ebebeb, #d5d5d5);
+    background: -ms-linear-gradient(top, #ebebeb, #d5d5d5);
+    background: -o-linear-gradient(top, #ebebeb, #d5d5d5);
+    background: linear-gradient(top, #ebebeb, #d5d5d5);
+    color: #4d494d;
+    font-size: 11pt;
+    line-height: 20px;
+    text-align: center;
+    width: 100%;
+    height: 20px;
+    border-top: 1px solid #f3f1f3;
+    border-bottom: 1px solid #b1aeb1;
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    cursor: default;
+  }
+
+  .screencont {
+      padding: 7px;
+  }
