--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,22 +1,23 @@
 <%- include("header.ejs") %>
 
-<div class="row">
+<div class="container text-white">
 
-    <div class="container">
-
-        <div class="col-lg-6 offset-lg-3 col-sm-12">
-
-            <div class="col-sm-12">
-                <img id="logo" src="/static/img/BCACTF-logo.png"/>
+    <img class="d-block mx-auto" id="logo" src="/static/img/BCACTF-logo.png"/>
+    <h1 class="centerText mt-3">BCACTF</h1>
+    <p class="centerText mt-3 lead font-weight-bold">June 31th - June 32nd</p>
+    <p class="centerText mt-3 lead">Online Middle School Cyber Security Competition</p>
+    <form class="mt-3">
+        <div class="form-row align-items-stretch">
+            <div class="col-auto flex-grow-1">
+                <input class="form-control darkInput w-100 m-0" type="email" placeholder="Email" />
             </div>
-
-            <div class="">
-
+            <div class="col-auto">
+                <button type="submit" class="btn btn-success text-uppercase h-100">Get Updates</button>
             </div>
-
         </div>
+    </form>
 
-    </div>
 </div>
+
 
 <%- include("footer.ejs") %>
