Integrate index page with mailing list

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,10 +6,10 @@
     <h1 class="centerText mt-3">BCACTF</h1>
     <p class="centerText mt-3 lead font-weight-bold">June 31th - June 32nd</p>
     <p class="centerText mt-3 lead">Online Middle School Cyber Security Competition</p>
-    <form class="mt-3">
+    <form class="mt-3" method="post" action="/register">
         <div class="form-row align-items-stretch">
             <div class="col-auto flex-grow-1">
-                <input class="form-control darkInput w-100 m-0" type="email" placeholder="Email" />
+                <input class="form-control darkInput w-100 m-0" type="email" name="email" placeholder="Email" />
             </div>
             <div class="col-auto">
                 <button type="submit" class="btn btn-success text-uppercase h-100">Get Updates</button>
