Also add rules to the header

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -42,7 +42,7 @@
                         <a href="/contact" class="nav-link m-2 menu-item nav-menu-item nav-active">CONTACT</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link m-2 menu-item nav-menu-item">RULES</a>
+                        <a href="/rules" class="nav-link m-2 menu-item nav-menu-item">RULES</a>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-link m-2 menu-item nav-menu-item">GET STARTED</a>
