--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">    
     <head>
+        <meta charset="utf-8">
+
         <title>BCA CTF - Cyber Security Competition</title>
 
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -10,6 +12,8 @@
         <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,500,600,700,800" rel="stylesheet">
 
         <link rel="stylesheet" type="text/css" href="static/css/index.css"/>
+
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
 
