Improve sizing and spacing

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <%- include("header.ejs") %>
 
-<div class="container text-white">
+<div class="container text-white pb-5">
 
     <img class="d-block mx-auto" id="logo" src="/static/img/BCACTF-logo.png"/>
     <h1 class="centerText mt-3">BCACTF</h1>
