--- a/views/header.ejs
+++ b/views/header.ejs
@@ -21,10 +21,10 @@
     <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="d-flex flex-grow-1">
                 <span class="w-100 d-lg-none d-block"><!-- hidden spacer to center brand on mobile --></span>
-                <a class="navbar-brand d-none d-lg-inline-block nav-logo" href="#">
+                <a class="navbar-brand d-none d-lg-inline-block nav-logo" href="/">
                     BCACTF
                 </a>
-                <a class="navbar-brand mx-auto d-lg-none d-inline-block" href="#">
+                <a class="navbar-brand mx-auto d-lg-none d-inline-block" href="/">
                 <!-- <a class="navbar-brand-two mx-auto d-lg-none d-inline-block nav-logo" href="#"> -->   
                     BCACTF
                 </a>
