Remove FAQ grid CSS declarations

--- a/views/faq.ejs
+++ b/views/faq.ejs
@@ -1,7 +1,7 @@
 <%- include("header.ejs") %>
 <div class="faqPageContent">
     <h1 style="text-align: center">FAQ</h1>
-    <div class="faqScreensGrid">
+    <div>
 
         <div class="faqScreen">
             <div class="titlebar">
