--- a/views/header.ejs
+++ b/views/header.ejs
@@ -49,7 +49,7 @@
                         <a href="/rules" class="nav-link m-2 menu-item nav-menu-item">RULES</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link m-2 menu-item nav-menu-item">GET STARTED</a>
+                        <a href="/register" class="nav-link m-2 menu-item nav-menu-item">GET STARTED</a>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-link m-2 menu-item nav-menu-item">LOGIN</a>
