--- a/views/faq.ejs
+++ b/views/faq.ejs
@@ -3,173 +3,17 @@
     <h1 style="text-align: center">FAQ</h1>
     <div class="container px-2 px-sm-0">
         <div class="row">
+            <% faq.forEach(question => { %>
             <div class="col-sm-12 col-md-6 col-lg-4 p-0">
                 <div class="faqScreen">
-                    <div class="titlebar">
-                    </div>
+                    <div class="titlebar"></div>
                     <div class="screencont">
-                        <h2>Who can participate in this CTF?</h2>
-                        <p>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-                        </p>
+                        <h2><%-question.question %></h2>
+                        <%-question.answer %>
                     </div>
                 </div>
             </div>
-            <div class="col-sm-12 col-md-6 col-lg-4 p-0">
-                <div class="faqScreen">
-                    <div class="titlebar">
-                    </div>
-                    <div class="screencont">
-                        <h2>Who can participate in this CTF?</h2>
-                        <p>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-4 p-0">
-                <div class="faqScreen">
-                    <div class="titlebar">
-                    </div>
-                    <div class="screencont">
-                        <h2>Who can participate in this CTF?</h2>
-                        <p>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-4 p-0">
-                <div class="faqScreen">
-                    <div class="titlebar">
-                    </div>
-                    <div class="screencont">
-                        <h2>Who can participate in this CTF?</h2>
-                        <p>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-4 p-0">
-                <div class="faqScreen">
-                    <div class="titlebar">
-                    </div>
-                    <div class="screencont">
-                        <h2>Who can participate in this CTF?</h2>
-                        <p>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-4 p-0">
-                <div class="faqScreen">
-                    <div class="titlebar">
-                    </div>
-                    <div class="screencont">
-                        <h2>Who can participate in this CTF?</h2>
-                        <p>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-4 p-0">
-                <div class="faqScreen">
-                    <div class="titlebar">
-                    </div>
-                    <div class="screencont">
-                        <h2>Who can participate in this CTF?</h2>
-                        <p>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-                        </p>
-                    </div>
-                </div>
-            </div><div class="col-sm-12 col-md-6 col-lg-4 p-0">
-                <div class="faqScreen">
-                    <div class="titlebar">
-                    </div>
-                    <div class="screencont">
-                        <h2>Who can participate in this CTF?</h2>
-                        <p>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-4 p-0">
-                <div class="faqScreen">
-                    <div class="titlebar">
-                    </div>
-                    <div class="screencont">
-                        <h2>Who can participate in this CTF?</h2>
-                        <p>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-4 p-0">
-                <div class="faqScreen">
-                    <div class="titlebar">
-                    </div>
-                    <div class="screencont">
-                        <h2>Who can participate in this CTF?</h2>
-                        <p>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-4 p-0">
-                <div class="faqScreen">
-                    <div class="titlebar">
-                    </div>
-                    <div class="screencont">
-                        <h2>Who can participate in this CTF?</h2>
-                        <p>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-4 p-0">
-                <div class="faqScreen">
-                    <div class="titlebar">
-                    </div>
-                    <div class="screencont">
-                        <h2>Who can participate in this CTF?</h2>
-                        <p>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-4 p-0">
-                <div class="faqScreen">
-                    <div class="titlebar">
-                    </div>
-                    <div class="screencont">
-                        <h2>Who can participate in this CTF?</h2>
-                        <p>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-4 p-0">
-                <div class="faqScreen">
-                    <div class="titlebar">
-                    </div>
-                    <div class="screencont">
-                        <h2>Who can participate in this CTF?</h2>
-                        <p>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-                        </p>
-                    </div>
-                </div>
-            </div>
+            <% }); %>
         </div>
     </div>
 </div>
