--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
     <h1 class="centerText mt-3">BCACTF</h1>
     <p class="centerText mt-3 lead font-weight-bold">June 31th - June 32nd</p>
     <p class="centerText mt-3 lead">Online Middle School Cyber Security Competition</p>
-    <form class="mt-3 mx-auto get-updates-form" method="post" action="/register">
+    <form class="mt-3 mx-auto get-updates-form" method="post" action="/subscribe">
         <div class="form-row align-items-stretch">
             <div class="col-auto flex-grow-1">
                 <input class="form-control darkInput w-100 m-0" type="email" name="email" required placeholder="Email" />
