add initial version of copy, fix typo

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,6 +1,6 @@
 <%- include("header.ejs") %>
 <div class="about pageContent">
     <h1>ABOUT</h1>
-    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+    <p>BCACTF is a Jeopardy-style CTF focused on introducing middle and high school students to cybersecurity and programming. BCACTF is organized by the Cybersecurity club at the Bergen County Academies, a student founded and run group focused on educating others about cybersecurity and related topics. As BCACTF is focused toward beginners we aimed to create problems that are accesible and would help introduce important computer security topics. The problems do get progressively harder, and we hope that there are problems suitable to every skill level.</p>
 </div>
 <%- include("footer.ejs") %>
