Spacing and back home redirect

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -55,6 +55,10 @@ h1 {
     padding-left: 21.25%;
 }
 
+.about li {
+    margin-bottom: 1em;
+}
+
 .contact form {
     padding-right: 29.86%;
     padding-left: 29.86%;
