--- a/views/subscribed.ejs
+++ b/views/subscribed.ejs
@@ -1,6 +1,9 @@
 <%- include("header.ejs") %>
 <div class="about pageContent">
     <h1>Subscribed</h1>
-    <p>Check your email for updates on BCA CTF!</p>
+    <p>Check your email for updates on BCACTF!</p>
+        <div class="col-auto">
+            <button type="submit" class="btn btn-success text-uppercase h-100" onclick="window.location='/';">Go Home</button>
+        </div>
 </div>
 <%- include("footer.ejs") %>
