--- a/views/faq.ejs
+++ b/views/faq.ejs
@@ -4,7 +4,7 @@
     <div class="container px-2 px-sm-0">
         <div class="row">
             <% faq.forEach(question => { %>
-            <div class="col-sm-12 col-md-6 col-lg-4 p-0">
+            <div class="col-sm-12 col-md-6 col-lg-4 p-md-0 px-3">
                 <div class="faqScreen">
                     <div class="titlebar">
                         <div class="titlebar-decoration mac">
