Write contact messages to sqlite3

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,7 +1,7 @@
 <%- include("header.ejs") %>
 <div class="contact pageContent">
     <h1>CONTACT</h1>
-    <form method="post" action="/sent">
+    <form method="post" action="/contact">
 
             <p>We’re constantly working to represent the student body.  If you have any ideas, questions for us or the administration, or concerns, feel free to let us know here!</p>
             
