--- a/static/css/index.css
+++ b/static/css/index.css
@@ -60,8 +60,8 @@ h1 {
 }
 
 .contact form {
-    padding-right: 29.86%;
-    padding-left: 29.86%;
+    padding-right: 8px;
+    padding-left: 8px;
 }
 
 .contact form p {
