--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,5 +1,5 @@
 <%- include("header.ejs") %>
-<div class="contact pageContent">
+<div class="contact pageContent container">
     <h1>CONTACT</h1>
     <form method="post" action="/contact">
 
