--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
 
     <img class="d-block mx-auto" id="logo" src="/static/img/BCACTF-logo.png"/>
     <h1 class="centerText mt-3">BCACTF</h1>
-    <p class="centerText mt-3 lead font-weight-bold">June 31th - June 32nd</p>
+    <p class="centerText mt-3 lead font-weight-bold">June 9-15</p>
     <p class="centerText mt-3 lead">Online Middle School Cyber Security Competition</p>
     <form class="mt-3 mx-auto get-updates-form" method="post" action="/subscribe">
         <div class="form-row align-items-stretch">
