--- a/views/header.ejs
+++ b/views/header.ejs
@@ -20,7 +20,7 @@
     <body>
 
     <!--Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
             <div class="d-flex flex-grow-1">
                 <span class="w-100 d-lg-none d-block"><!-- hidden spacer to center brand on mobile --></span>
                 <a class="navbar-brand d-none d-lg-inline-block nav-logo" href="/">
