Comment out stuff and fix contact blurb

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -3,7 +3,7 @@
     <h1>CONTACT</h1>
     <form method="post" action="/contact">
 
-            <p>We’re constantly working to represent the student body.  If you have any ideas, questions for us or the administration, or concerns, feel free to let us know here!</p>
+            <p>We’re constantly striving to improve.  If you have any questions, ideas, or concerns for us, feel free to let us know here!</p>
             
             <input type="text" name="name" placeholder="Name" required>
             <input type="email" name="email" placeholder="Email" required>
