--- a/views/header.ejs
+++ b/views/header.ejs
@@ -50,12 +50,14 @@
                     <li class="nav-item">
                         <a href="/rules" class="nav-link m-2 menu-item nav-menu-item">RULES</a>
                     </li>
+                    <!-- # REGISTRATION and LOGIN disabled until launch
                     <li class="nav-item">
                         <a href="/register" class="nav-link m-2 menu-item nav-menu-item">GET STARTED</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link m-2 menu-item nav-menu-item">LOGIN</a>
+                        <a href="/login" class="nav-link m-2 menu-item nav-menu-item">LOGIN</a>
                     </li>
+                    -->
                 </ul>
             </div>
         </nav>
